--- a/CompareDB_description.html
+++ b/CompareDB_description.html
@@ -285,8 +285,8 @@ pre[data-line] .line-highlight[data-end]:after {
 
 <p>ウェルカムです！ただすぐには対応できないと思います！
             
-            2020.1.15追記
-            というように書いたのですが、誰もfeedbackくれません。アクセスログ見るとたびたび見に来てくれる人は居るみたいなのですが・・・。
+            <br>2020.1.15追記<br>
+            というように書いたのですが、誰もfeedbackくれません。アクセスログ見るとたびたび見に来てくれる人は居るみたいなのですが・・・。<br>
             というか、まずこのページいちいち見に来る人いるんですかね・・・モチベ下がる。。</p>
 
       </div>
