--- a/CompareDB_description.html
+++ b/CompareDB_description.html
@@ -283,11 +283,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <p>taxaの名前でフィルターする機能はGTDB/Silva内で検索している。GG固有の名前には今のところ非対応。</p>
 <h2 class="mume-header" id="feedbacks">Feedbacks</h2>
 
-<p>ウェルカムです！ただすぐには対応できないと思います！
-            
-            <br>2020.1.15追記<br>
-            というように書いたのですが、誰もfeedbackくれません。アクセスログ見るとたびたび見に来てくれる人は居るみたいなのですが・・・。<br>
-            というか、まずこのページいちいち見に来る人いるんですかね・・・モチベ下がる。。</p>
+<p>ウェルカムです！ただすぐには対応できないと思います！<br>2020.1.15追記<br>というように書いたのですが、誰もfeedbackくれません。アクセスログ見るとたびたび見に来てくれる人は居るみたいなのですが・・・。<br>というか、まずこのページいちいち見に来る人いるんですかね・・・モチベ下がる。。</p>
 
       </div>
       
